[metadata]
name = pyNyaav2
version = 0.1.4.1
description = Python Nyaav2 API Wrapper
long_description = file: README.md, LICENSE.md
author = noaione
author-email = noaione0809@gmail.com
keywords = nyaa, torrent, api, python, nyaa.si
license = MIT
url = https://github.com/noaione/pyNyaav2
download_url = https://github.com/noaione/pyNyaav2/tarball/master

classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Topic :: Internet :: API

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests
    beautifulsoup4
